Use connexion with generated controllers
